Laundry list of fixes per Danny including photo touch ups, adding social meta tags, fixes for svg icons on iOS, and more

--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -30,7 +30,7 @@
 }
 
 .nuclear-icon {
-    height: 60%;
+    width: 250px;
     margin-top: 1.5rem;
 }
 
@@ -87,7 +87,7 @@
     }
 
     .nuclear-icon {
-        height: 40%;
+        height: 200px;
     }
 }
 
@@ -107,7 +107,7 @@
     }
 
     .nuclear-icon {
-        height: 80%;
+        height: 140px;
         margin-top: 0;
     }
     
