--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@
   bottom: 0;
   left: 0;
   position: absolute;
-  height: 1px;
+  height: 2px;
   background: #000;
   width: 100%;
   transition: all .5s;
@@ -1157,7 +1157,7 @@ a.footer-span:hover {
 
 .doctor {
   height: 300px;
-  background-image: url(../images/nutech-lab2.JPG);
+  background-image: url(../images/nutech-lab2-psd.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
@@ -1444,6 +1444,9 @@ a.footer-span:hover {
       margin-left: 0;
     }
     
+    .sidenav-hr {
+      margin: 0 auto;
+    }
 
     .pharma-text-container {
       padding: 2rem 0;
